--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "node server/",
-    "simulate-prod": "NODE_ENV='production' node server/",
-    "start": "node server/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=dev node server/",
+    "start": "NODE_ENV=production node server/"
   },
   "author": "",
   "license": "ISC",
