--- a/http-client/package.json
+++ b/http-client/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "basic-graphql",
+  "name": "http-client",
   "version": "1.0.0",
   "description": "",
   "author": "",
   "license": "ISC",
-  "scripts": {
-    "start": "NODE_ENV=production node ."
-  },
   "dependencies": {
     "express": "^4.17.1"
   }
