--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "basic-graphql",
   "version": "1.0.0",
-  "description": "",
+  "description": "TODO",
+  "keywords": ["apollo graphql","basic graphql example", "apollographqlclient", "apollographqlserver"],
   "scripts": {
-    "dev:apollo": "NODE_ENV=dev node apollo-server/",
-    "dev:http": "NODE_ENV=dev node http-server/",
+    "dev:server": "NODE_ENV=dev node apollo-server/",
+    "dev:client": "NODE_ENV=dev node http-client/",
     "dev": "run-p dev:*",
     "start": "run-p start:*",
-    "start:apollo": "NODE_ENV=production node apollo-server/",
-    "start:http": "NODE_ENV=production node http-server/"
+    "start:server": "NODE_ENV=production node apollo-server/",
+    "start:client": "NODE_ENV=production node http-client/"
   },
-  "author": "",
+  "author": "Al Diaz",
   "license": "ISC",
   "dependencies": {
     "npm-run-all": "^4.1.5"
