--- a/http-client/package.json
+++ b/http-client/package.json
@@ -1,9 +1,10 @@
 {
   "name": "http-client",
   "version": "1.0.0",
-  "description": "",
-  "author": "",
-  "license": "ISC",
+  "description": "Simple example of how to implement Apollo GraphQL client",
+  "keywords": ["apollo graphql", "apollo graphql client"],
+  "author": "Al Diaz",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.17.1"
   }
