--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "basic-graphql",
   "version": "1.0.0",
-  "description": "TODO",
-  "keywords": ["apollo graphql","basic graphql example", "apollographqlclient", "apollographqlserver"],
+  "description": "Simple example of how to implement Apollo GraphQL: client and server",
+  "keywords": ["apollo graphql","basic graphql example", "apollographqlclient", "apollographqlserver", "apollo client", "apollo server"],
   "scripts": {
     "dev:server": "NODE_ENV=dev node apollo-server/",
     "dev:client": "NODE_ENV=dev node http-client/",
@@ -12,7 +12,7 @@
     "start:client": "NODE_ENV=production node http-client/"
   },
   "author": "Al Diaz",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "npm-run-all": "^4.1.5"
   }
