updt apollo-server plus name collision npm fix

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apollo-server",
+  "name": "server",
   "version": "1.0.0",
   "description": "Simple example of how to implement Apollo GraphQL Server",
   "keywords": [
@@ -9,7 +9,7 @@
   "author": "Al Diaz",
   "license": "MIT",
   "dependencies": {
-    "apollo-server": "^2.9.6",
+    "apollo-server": "^2.21.2",
     "graphql": "^14.5.8"
   }
 }
